...

        <Controller
          control={control}
          name="email"
          render={({ field: { onChange, onBlur, value } }) => (
            <TextField
              label="Email address"
              value={value}
              onChangeText={onChange}
              onBlur={onBlur}
              error={formState.errors.email?.message}
              placeholder="you@example.com"
              keyboardType="email-address"
...
              editable={!formState.isSubmitting}
            />
          )}
        />

        <Button
          label="Send code"
          loading={formState.isSubmitting}
          onPress={() => void handleSubmit(onSubmit)()}
        />
      </View>
    </Screen>
  );
...
